# course_work_6_django

./: README.md  pyproject.toml
skymarket/ads/: models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_ad_author_ad_created_at_ad_description_ad_image_and_more.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_user_email_user_first_name_user_last_name.py  0003_user_is_active.py  0004_alter_user_role.py  0005_alter_user_image.py
